# backend-djando-admin

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
bi360/: manage.py
bi360/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
bi360/authentication/migrations/: 0001_initial.py
bi360/authentication/utils/: permission.py
bi360/business/: apps.py  models.py
bi360/business/migrations/: 0001_initial.py  0002_business_license_expiration_date_and_more.py  0003_business_nit_business_phone.py
bi360/core/utils/: get_df_from_request.py  save_df_in_db.py  save_file.py
bi360/customers/: apps.py  models.py  serializers.py  urls.py  views.py
bi360/customers/migrations/: 0001_initial.py  0002_alter_valuation_created_at.py  0003_endcustomer.py  0004_alter_endcustomer_address_alter_endcustomer_city_and_more.py  0005_alter_endcustomer_last_name.py  0006_remove_endcustomer_company_name_and_more.py  0007_alter_endcustomer_phone.py
bi360/draft_files/: apps.py  urls.py  views.py
bi360/payroll/: apps.py  models.py  urls.py  views.py
bi360/payroll/migrations/: 0001_initial.py  0002_remove_employee_hire_date.py  0003_alter_employee_email_alter_employee_employee_id_and_more.py  (+2 more)
bi360/powerbi_auth/: apps.py  urls.py  views.py
bi360/products/: apps.py  models.py  urls.py  views.py
bi360/project/: settings.py  urls.py  wsgi.py
bi360/sales/: apps.py  models.py  serializers.py  urls.py  views.py
bi360/sellers/: apps.py  models.py
bi360/upload_setup/: apps.py  models.py  serializers.py  urls.py  views.py
(+20 files in other folders)
